--- a/src/components/scss/NavBar.scss
+++ b/src/components/scss/NavBar.scss
@@ -3,23 +3,29 @@
   font-family: 'Comfortaa', cursive;
   display: flex;
   //position:fixed;
-  height: 80px;
+  height: 70px;
 }
 
 .Nav-Bar img{
   height: 60px;
-  margin: 10px;
+  margin: 5px 10px;
 }
 
 .NB-center{
   display: flex;
-  gap: 7vw;
+  gap: 5vw;
   font-size: 1.3rem;
-  margin-left: 18vw;
+  padding: 5px;
+  margin:auto;
 
   a{
     color: black;
     text-decoration:none;
+    font-weight: bold;
+  }
+
+  li{
+    padding: 4px 8px ;
   }
 }
 
@@ -30,8 +36,27 @@
 
     a{
       color: white;
+      font-weight: normal;
     }
 }
 
+.NB-rigth{
+  display: flex;
+  font-size: 2.5rem;
+  height: 60px;
+  margin: 5px 10px;
+  width:  auto;
+  padding: 0;
+
+  img, svg{
+    height: 41px;
+    margin: 5px 10px;
+  }
+  svg{
+    height: 45px;
+    width: auto;
+    color: black;
+  }
+}
 
 
