--- a/src/components/scss/NavBar.scss
+++ b/src/components/scss/NavBar.scss
@@ -9,6 +9,11 @@
 .Nav-Bar img{
   height: 60px;
   margin: 5px 10px;
+
+  &:hover{
+    filter: invert(100%) sepia(24%) saturate(2199%) 
+    hue-rotate(185deg) brightness(143%) contrast(81%);
+  }
 }
 
 .NB-center{
@@ -35,7 +40,7 @@
   border-radius: 5%;
 
     a{
-      color: white;
+      color: #e9e6e6;
       font-weight: normal;
     }
 }
@@ -43,20 +48,35 @@
 .NB-rigth{
   display: flex;
   font-size: 2.5rem;
+  color: rgb(72, 72, 72);
   height: 60px;
-  margin: 5px 10px;
+  margin: 5px;
   width:  auto;
   padding: 0;
 
   img, svg{
-    height: 41px;
-    margin: 5px 10px;
+    height: 40px;
+    margin: 5px;
+
+    &:hover{
+      filter: invert(100%) sepia(24%) saturate(2199%) 
+      hue-rotate(185deg) brightness(143%) contrast(81%);
+    }
+
   }
   svg{
     height: 45px;
     width: auto;
     color: black;
+    margin-right: 0;
   }
 }
 
+#index{
+  font-size: 1.2rem;
+  font-weight: bold;
+}
 
+#index-li{
+  width: 12px;
+}
