--- a/src/components/scss/cards.css
+++ b/src/components/scss/cards.css
@@ -1,9 +1,12 @@
-.card-img-top{
-  height: 50vh;
-  object-fit: scale-down;
-  padding-top: 3vh;
+.card{
+  height: 800vh;
+  margin: 1rem 0.5rem;
+  text-align: center;
 }
 
-.card{
-  margin: 1rem 0.5rem; 
+.card-img-top{
+  height: 480px;
+  object-fit: scale-down;
+  padding: 2vh 2vh 0 2vh;
 }
+
