--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
-$color1: grey;
-
-
-.App {
-
+* { /*Setear margenes generales para adaptar a cualquier navegador*/
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  align-self: center;
+  position: relative;
 }
