--- a/src/components/scss/Card.scss
+++ b/src/components/scss/Card.scss
@@ -1,5 +1,6 @@
 .card:hover {
-  box-shadow: 4px 8px 16px 0.8px rgb(83, 83, 84);
+  box-shadow: 4px 8px 16px 0.8px rgb(163, 163, 163);
+  transition: 0.5s ease;
 }
 
 .card-title{
