--- a/src/components/scss/Item.scss
+++ b/src/components/scss/Item.scss
@@ -66,3 +66,53 @@
 .count{
   font-size: 1.35rem;
 }
+
+@media only screen and (max-width: 768px) {
+
+  .container-item{
+    margin: 15px 10px;
+    padding: 10px;
+    display: block;
+  }
+
+  .container-img{
+    //width: auto;
+    display: flex;//3 propiedades en contenedor para centrar img
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+
+    #img-item{
+      margin: auto;
+      max-height: 400px;
+    }
+  }
+
+  .info-item{
+    width: 100%;
+    padding: 0px 5% 0px 5%;
+    font-family: 'Lato', 'Gill Sans MT', Calibri;
+
+    h1{
+      text-align: right;
+      font-size: 3rem;
+      margin:0 5%;
+    }
+
+    h3{
+      font-size: 2rem;
+      text-align: right;
+      margin: 0 3%;
+    }
+
+    h4{
+      text-align: center;
+      margin:15px 20px 15px;
+      font-weight: 800;
+    }
+  }
+
+  .count-container{
+    text-align: center;
+  }
+}
