--- a/src/components/scss/ShopingCart.scss
+++ b/src/components/scss/ShopingCart.scss
@@ -21,7 +21,6 @@
 
   button{
     width: 10%;
-    
     letter-spacing: 1px;
 
     &:hover{
@@ -32,7 +31,6 @@
 }
 
 .cart-item-card{
-  //background-color: rgba(0, 0, 0, 0.149);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -109,4 +107,55 @@
 
 #cart-clear{
   background-color: rgba(109, 12, 12, 0.735);
+}
+
+@media only screen and (max-width: 768px) {
+  .user-band{
+    h1{
+      width: 90%;
+      padding:5px 8px;
+    }
+
+    button{
+      width: auto;
+      padding:5px 8px;
+    }
+  }
+
+  .list-cart-container{
+    margin: 5px;
+    padding: 5px;
+  }
+
+  .cart-item-card{
+    width: 100%;
+  }
+
+  .cart-item-img{
+    width: 100px;
+    margin-right: 5px;
+  }
+
+  .cart-item-info{
+    width: 68%;
+    h2{
+      font-size: 1.2rem;
+      font-weight: 600;
+      line-height: 1.5;
+    }
+  }
+
+  .cart-item-qty{
+    width: 50px;
+  }
+
+  #cart-total{
+    font-size: 1.4rem;
+    font-weight: 600;
+    
+  }
+
+  .cart-finish{
+    margin-top: 20px;
+  }
 }
